--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ hr{
   border-width: 20px;
   margin-left: 700px;
   margin-right: 700px;
-  color: #EAF6F6;
+  color: #66BFBF;
   margin-top: 100px;
   margin-bottom: 100px;
 }
